--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -2,7 +2,7 @@ public with sharing class AccountController {
 
     @AuraEnabled(cacheable=true)
     public static List<Account> findAccounts(String searchKey) {
-        System.debug('key+++'+key);
+        System.debug('searchKey+++'+searchKey);
         String key = '%' + searchKey + '%';
         return [SELECT Id, Name, AccountNumber FROM Account WHERE Name LIKE :key  LIMIT 10];
     }
